fixed articles position on tablets

--- a/src/sections/Level/Articles/styles/styles.scss
+++ b/src/sections/Level/Articles/styles/styles.scss
@@ -1,5 +1,5 @@
 .tableContent {
-    @media (max-width: 767px) {
+    @media (max-width: 990px) {
     	justify-content: center;
-  	}
+	}
 }
